2007-02-23: Fixed a bug in the "db_close"-function.  Improved documentation.

2007-02-19: Added check for out of memory after malloc.

2007-01-31: Fixed build problem on x86_64: added -fPIC flag to compilation
            of C-stubs.

2007-01-17: Complete rewrite by Markus Mottl <markus.mottl@gmail.com>.

2005-04-??: Initial coding (0.1) by
            Christian Szegedy <csdontspam871@metamatix.org>.